add 補充: try, except

--- a/slides/week_7.html
+++ b/slides/week_7.html
@@ -543,3 +543,12 @@ people = [i[1] for i in members if i[0] == '外文系']
     </textarea>
   </section>
 </section>
+
+<section data-background-transition="zoom" data-background="#0abab5" data-markdown>
+  <textarea data-template>
+### 補充： `try`, `except`, `raise`
+
+<i class="fas fa-exclamation-circle"></i> [參考文件](https://docs.python.org/3/tutorial/errors.html)
+  </textarea>
+</section>
+
