--- a/slides/week_8.html
+++ b/slides/week_8.html
@@ -262,6 +262,7 @@ greeting()
 
 課程後公布
 
+{% comment %}
 `func.py`
 ```python
 def toggle_case(string):
@@ -273,6 +274,7 @@ def toggle_case(string):
         output = string
     return output
 ```
+{% endcomment %}
     </textarea>
   </section>
 </section>
