--- a/slides/week_6.html
+++ b/slides/week_6.html
@@ -23,10 +23,9 @@ title: 資料型態應用
       ### <i class="fab fa-apple"></i> Mac 的捧油
 
       0. 輸入 <kbd>CTRL</kbd> + <kbd>`</kbd> 打開 TERMINAL
-      0. 把以下這段貼上並按下 <kbd>ENTER</kbd>
-
+      0. 把以下這段貼上並按下 <kbd>ENTER</kbd>  
       ```bash
-      echo "alias pip=pip3" >> ~/.bash_profile && exit 
+      echo "alias pip=pip3" >> ~/.bash_profile 
       ```
     </textarea>
   </section>
