--- a/slides/week_9.html
+++ b/slides/week_9.html
@@ -43,7 +43,7 @@ title: 重要觀念整理
 不會，謝謝
     </textarea>
   </section>
-  <section data-markdown data-background="https://i.imgflip.com/11gzsl.jpg" data-background-size="contain">
+  <section data-markdown data-background="assets/img/week9/cat.gif" data-background-size="contain">
     <textarea data-template>
 天啊!
 
@@ -231,7 +231,11 @@ def goodbye():
 
 goodbye
 ```
-為什麼出現類似 `<function __main__.goodbye()` 的東西？
+為什麼出現類似 
+
+`<function __main__.goodbye()>`
+
+的東西？
     </textarea>
   </section>
   <section data-markdown>
