--- a/slides/week_9.html
+++ b/slides/week_9.html
@@ -131,7 +131,7 @@ n1 == n2
     <textarea data-template>
 ```python
 pass = 88
-if password == 88:
+if pass == 88:
     print('Great!')
 else:
     print('Wrong!')
