--- a/slides/week_11.html
+++ b/slides/week_11.html
@@ -1,15 +1,70 @@
 ---
 layout: slide_pfh
 permalink: PythonForHumanities/slides/week11
-title:  正規表示法 
+title:  正規表示式
 ---
+
+<section>
+  <section data-background-transition="zoom" data-background="#b5533c" data-markdown>
+    <textarea data-template>
+### 學習資源
+
++ [RegexOne](https://regexone.com/)
++ [pythex](https://pythex.org/)
++ [pyregex](http://www.pyregex.com/)
++ [Python 官方文件](https://docs.python.org/3/library/re.html)
++ [PTT RegExp 板](https://www.ptt.cc/bbs/RegExp/index.html)
+    </textarea>
+  </section>
+</section>
 
 <section>
   <section data-markdown>
     <textarea data-template>
-
+### 簡介
     </textarea>
-  </section>>
+  </section>
+  <section data-markdown>
+    <textarea data-template>
+這些都是一樣的東西：
+
++ 正則表達式
++ 正規表示法
++ 正規運算式
++ 規則運算式
++ 常規表示法
+    </textarea>
+  </section>
+  <section data-markdown>
+    <textarea data-template>
+英文名稱叫做
+
+__Regular Expression__
+
+又稱為
+
+__Regex__
+    </textarea>
+  </section>
+  <section data-markdown>
+    <textarea data-template>
+Regex 不是 Python 特有的語法
+
+許多語言內建都有 Regex
+    </textarea>
+  </section>
+  <section data-markdown>
+    <textarea data-template>
+在 Python 中， import `re` 後即可開始使用
+
+```python
+import re
+```
+  </textarea>
+  </section>
+  <section data-markdown>
+    <textarea data-template>
+會寫正規讓你走到飛 ╰(°ㅂ°)╯
+    </textarea>
+  </section>
 </section>
-
-
