--- a/slides/week_11.html
+++ b/slides/week_11.html
@@ -68,3 +68,19 @@ import re
     </textarea>
   </section>
 </section>
+
+<section>
+  <section data-markdown>
+    <textarea data-template>
+### 基本概念
+    </textarea>
+  </section>
+  <section data-markdown>
+    <textarea data-template>
+    </textarea>
+  </section>
+  <section data-markdown>
+    <textarea data-template>
+    </textarea>
+  </section>
+</section>
